@@ -1,3 +1,8 @@
+2018-08-29  Chenghua Xu  <paul.hua.gm@gmail.com>
+
+	* testsuite/ld-mips-elf/mips-elf-flags.exp (good_combination):
+	Skip o32 flags checking if target is mips*-*-irix*.
+
 2018-08-24  Chenghua Xu  <paul.hua.gm@gmail.com>
 
 	* testsuite/ld-mips-elf/mips-elf-flags.exp
